--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 body {
-  background-color: white;
   min-width: 1vw;
 }
 
 .App {
   width: 100%;
-  background: radial-gradient(75.49% 265.37% at 24.51% 40.67%, #F6FBFD 0%, #E9F4FB 100%);
+  background-color: white;
 }
 
 .landing {
@@ -37,6 +36,8 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-bottom: 2vw;
+  margin-bottom: 1vw;
 }
 
 .left {
@@ -77,4 +78,17 @@ h1 {
   position: relative;
   width: 100%;
   border-radius: 32px;
+}
+
+.trial {
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 12vw;
+  background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.1) 0%, rgba(217, 115, 171, 0.1) 100%);
+}
+
+footer {
+  height: 10vw;
+  background: #145C82;
 }
