--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .body {
-  min-width: 1vw;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -24,14 +24,13 @@ header {
 
 .left {
   position: relative;
-  width: 70vh;
 }
 
-.empower {
+.pink {
   color: #c31575;
 }
 
-.tutor {
+.blue {
   color: #2196d4;
 }
 
@@ -45,7 +44,6 @@ header {
 
 .right {
   position: relative;
-  width: 70vh;
 }
 
 .right img {
@@ -78,7 +76,6 @@ header {
 
 .choose .grid .card {
   height: 26vh;
-  width: 80vh;
   margin: 2vh;
   display: flex;
   background: #ffffff;
@@ -122,7 +119,7 @@ header {
   padding: 15vw;
 }
 
-.boost .grid {
+.boost .overlay {
   padding: 0 18vh 6vh 18vh;
   justify-content: center;
   align-items: center;
