--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 
 .landing {
   background: radial-gradient(75.49% 265.37% at 24.51% 40.67%, #F6FBFD 0%, #E9F4FB 100%);
+  padding: 8vh 0;
 }
 
 .pink {
