--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -1,13 +1,3 @@
 nav {
-    position: relative;
-    display: flex;
-    padding: 5vh;
-    justify-content: space-around;
-    align-items: center;
-  }
-  
-  nav img {
-    position: relative;
-    width: 250.75px;
-    height: 56px;
-  }
+  padding-bottom: 8vh;
+}
