--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
 }
 
 .learning {
+  margin: 15vh 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   text-align: center;
 }
 
