--- a/src/App.css
+++ b/src/App.css
@@ -65,13 +65,32 @@ nav {
   border-radius: 6px;
 }
 
+/* Path: src/Components/Learning.js */
 .learning {
+  background: #FFFFFF;
   margin: 15vh 0;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.learnBtn {
+  margin-top: 5vh;
+  padding: 1vh 2vh;
+  background: #FFFFFF80;
+  color: black;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  border-radius: 14px;
+  box-shadow: 0px 4px 10px 0px #00000026;
+  transition: ease-in-out 0.3s;
+}
+
+.learnBtn:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
 }
 
 .choose {
