--- a/src/App.css
+++ b/src/App.css
@@ -77,13 +77,12 @@ nav {
 
 .learnBtn {
   margin-top: 5vh;
-  padding: 1vh 2vh;
+  padding: 0;
   background: #FFFFFF80;
   color: black;
   border: none;
-  border-radius: 6px;
   cursor: pointer;
-  border-radius: 14px;
+  border-radius: 18px;
   box-shadow: 0px 4px 10px 0px #00000026;
   transition: ease-in-out 0.3s;
 }
