--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,11 @@
   background: #fbfbfb;
 }
 
-/* Path: src/Components/Navbar.js */
-nav {
-  padding-bottom: 8vh;
-}
-
 /* Path: src/Components/Landing.js */
 .landing {
   background: radial-gradient(75.49% 265.37% at 24.51% 40.67%, #F6FBFD 0%, #E9F4FB 100%);
-  padding: 9vh 0;
+  padding: 3vw 0 6vw 0;
+  margin-bottom: 16vw;
 }
 
 .pink {
@@ -38,6 +34,7 @@ nav {
 }
 
 .tab {
+  background: #FFFFFF;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -52,13 +49,11 @@ nav {
 
 .b1 {
   background: #2196D433;
-  padding: 0.6rem 1rem;
   border-radius: 6px;
 }
 
 .b2 {
   background: #C3157533;
-  padding: 0.6rem 1rem;
   border-radius: 6px;
 }
 
@@ -70,6 +65,7 @@ nav {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 2vh 0 10vh;
 }
 
 .learnBtn {
