Incorporating external changes

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
 .App {
   width: 100%;
   background: #fbfbfb;
+  font-family: sans-serif;
+  text-align: center;
 }
 
 /* Path: src/Components/Landing.js */
